--- a/main.css
+++ b/main.css
@@ -54,8 +54,8 @@ body {
 }
 
 :root {
-  --background1: #62D99C;
-  --background2: #62D99C;
+  --background1: #f1a2f0;
+  --background2: #f1a2f0;
 }
 
 
