--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .head {
-  background-color: #36D986;
+  background-color: #f1a2f0;
   min-height: 80px;
   width: 100%;
   margin: 0;
