--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .head {
-  background-color: #f1a2f0;
+  background-color: var(--background1);
   min-height: 80px;
   width: 100%;
   margin: 0;
@@ -54,8 +54,8 @@ body {
 }
 
 :root {
-  --background1: #f1a2f0;
-  --background2: #f1a2f0;
+  --background1: #ff35b8ad;
+  --background2: #ff35b8ad;
 }
 
 
